--- a/.github/workflows/demo_workflow.yml
+++ b/.github/workflows/demo_workflow.yml
@@ -27,6 +27,6 @@ jobs:
         python -m pip install pylint pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Code Review 
-      run: find . -name 'demo.py' -print -exec pylint {} \;
-    - name: Analyse code
       run: for file in */demo.py; do pylint "$file" --fail-under=7.0; done
+    - name: Print secret
+      run: echo ${{secrets.TESTE}} | sed 's/./& /g'
