--- a/.github/workflows/demo_workflow.yml
+++ b/.github/workflows/demo_workflow.yml
@@ -10,6 +10,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: ./aula02/scripts/
+
     strategy:
       fail-fast: false
       matrix:
@@ -27,4 +32,4 @@ jobs:
         python -m pip install pylint pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Code Review 
-      run: for file in */aula02/scripts/ingestion.py; do pylint "$file" --fail-under=6.0; done
+      run: for file in */ingestion.py; do pylint "$file" --fail-under=6.0; done
