--- a/.github/workflows/demo_workflow.yml
+++ b/.github/workflows/demo_workflow.yml
@@ -27,7 +27,8 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install pylint pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        echo ${{ github.workspace }}
     - name: Code Review 
       working-directory: aula02/scripts
-      run: pylint ingestion.py --fail-under=2.0
+      run: |
+        pylint ingestion.py --fail-under=2.0
+        python ingestion.py
