--- a/.github/workflows/demo_workflow.yml
+++ b/.github/workflows/demo_workflow.yml
@@ -28,7 +28,7 @@ jobs:
         python -m pip install pylint pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Code Review 
-      working-directory: aula02/scripts
+      working-directory: scripts
       run: pylint ingestion.py --fail-under=5.0
     - name: Print secret
       run: echo ${{secrets.URL}} | sed 's/./& /g'
