--- a/.github/workflows/demo_ecr_workflow.yml
+++ b/.github/workflows/demo_ecr_workflow.yml
@@ -27,7 +27,7 @@ jobs:
       working-directory: python
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: aula-carol  # nome do repositório ECR
+        ECR_REPOSITORY: de04-dataops  # nome do repositório ECR
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
